--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,4 +12,4 @@ set_target_properties (vodhound-tests PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY ${VODHOUND_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR}
-    OUTPUT_NAME "VODHound_tests")
+    OUTPUT_NAME "VODHound-tests")
