AST validation. Frame/timing syntax works

--- a/plugins/search/CMakeLists.txt
+++ b/plugins/search/CMakeLists.txt
@@ -10,12 +10,7 @@ vodhound_add_plugin (${PROJECT_NAME}
         "src/asm_x86_64.c"
         "src/ast.c"
         "src/ast_ops.c"
-        "src/ast_post_dj.c"
-        "src/ast_post_fh.c"
-        "src/ast_post_fs.c"
-        "src/ast_post_idj.c"
-        "src/ast_post_sh.c"
-        "src/ast_post_patch_motions.c"
+        "src/ast_post.c"
         "src/dfa.c"
         "src/search_index.c"
         "src/nfa.c"
