--- a/application-gtk4/CMakeLists.txt
+++ b/application-gtk4/CMakeLists.txt
@@ -3,8 +3,8 @@ project (appliciation-gtk4
     LANGUAGES C
     VERSION 0.0.1)
 
-find_package (PkgConfig REQUIRED)
-pkg_check_modules (GTK4 REQUIRED IMPORTED_TARGET gtk4)
+find_package (GTK4 REQUIRED COMPONENTS
+    gtk glib cairo pango harfbuzz gdk-pixbuf graphene)
 
 add_executable (application-gtk4
     "src/main.c")
@@ -14,7 +14,13 @@ target_include_directories (application-gtk4
 target_link_libraries (application-gtk4
     PRIVATE
         VODHound::vh
-        PkgConfig::GTK4)
+        GTK4::glib
+        GTK4::cairo
+        GTK4::pango
+        GTK4::harfbuzz
+        GTK4::gdk-pixbuf
+        GTK4::graphene
+        GTK4::gtk)
 
 set_target_properties (application-gtk4 PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY ${VODHOUND_BUILD_BINDIR}
@@ -23,6 +29,13 @@ set_target_properties (application-gtk4 PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY_DEBUG ${VODHOUND_BUILD_BINDIR}
     RUNTIME_OUTPUT_DIRECTORY_RELEASE ${VODHOUND_BUILD_BINDIR}
     OUTPUT_NAME "VODHound-gtk4")
+
+if (WIN32 OR CYGWIN)
+    add_custom_command (TARGET application-gtk4 POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${GTK4_RUNTIMES} ${VODHOUND_BUILD_BINDIR}
+        COMMENT "Copying GTK4 DLLs to ${VODHOUND_BUILD_BINDIR}"
+        VERBATIM)
+endif ()
 
 install (
     TARGETS application-gtk4
