--- a/vh/CMakeLists.txt
+++ b/vh/CMakeLists.txt
@@ -59,12 +59,25 @@ endif ()
 configure_file ("templates/config.h.in" "include/vh/config.h")
 
 ###############################################################################
+# Generate db bindings
+###############################################################################
+
+sqlgen_target (vhdb
+    INPUT "src/db.sqlgen"
+    OUTPUT_HEADER "include/vh/db.h"
+    BACKENDS sqlite)
+
+###############################################################################
 # Library source files and settings
 ###############################################################################
 
 add_library (vh ${VH_LIB_TYPE}
     "templates/config.h.in"
     "${PROJECT_BINARY_DIR}/include/vh/config.h"
+
+    "src/db.sqlgen"
+    "${PROJECT_BINARY_DIR}/include/vh/db.h"
+    "${SQLGEN_vhdb_OUTPUTS}"
 
     "include/vh/backtrace.h"
     "include/vh/btree.h"
