--- a/vh/CMakeLists.txt
+++ b/vh/CMakeLists.txt
@@ -64,7 +64,7 @@ configure_file ("templates/config.h.in" "include/vh/config.h")
 
 sqlgen_target (vhdb
     INPUT "src/db.sqlgen"
-    OUTPUT_HEADER "include/vh/db.h"
+    HEADER "include/vh/db.h"
     BACKENDS sqlite3)
 
 ###############################################################################
