--- a/plugins/vod-review/CMakeLists.txt
+++ b/plugins/vod-review/CMakeLists.txt
@@ -5,6 +5,10 @@ project ("vod-review"
     LANGUAGES C)
 
 include (VODHoundPlugin)
+
+find_package (GTK4 REQUIRED COMPONENTS
+    gtk glib cairo pango harfbuzz gdk-pixbuf graphene)
+
 vodhound_add_plugin (${PROJECT_NAME}
     SOURCES
         "src/plugin_vod_review.c"
@@ -13,8 +17,13 @@ vodhound_add_plugin (${PROJECT_NAME}
         "include"
     LIBS
         VODHound::vh
-        IUP::iup)
+        GTK4::glib
+        GTK4::cairo
+        GTK4::pango
+        GTK4::harfbuzz
+        GTK4::gdk-pixbuf
+        GTK4::graphene
+        GTK4::gtk)
 
 if (VODHOUND_VOD_REVIEW)
 endif ()
-
