Reworking vh mem

--- a/vh/CMakeLists.txt
+++ b/vh/CMakeLists.txt
@@ -112,7 +112,6 @@ add_library (vh ${VH_LIB_TYPE}
     "src/hm.c"
     "src/init.c"
     "src/log.c"
-    "src/mem.c"
     "src/mstream.c"
     "src/plugin_loader.c"
     "src/rb.c"
@@ -134,14 +133,16 @@ add_library (vh ${VH_LIB_TYPE}
     "src/import/reframed_videometadata.c"
     "src/import/reframed_videometadata_1_0.c"
 
-    $<$<PLATFORM_ID:Linux>:$<$<BOOL:${VH_MEM_BACKTRACE}>:src/linux/backtrace_linux.c>>
+    $<$<BOOL:${VH_MEM_DEBUGGING}>:src/mem.c>
+
+    $<$<PLATFORM_ID:Linux>:src/linux/backtrace_linux.c>
     $<$<PLATFORM_ID:Linux>:src/linux/dynlib_linux.c>
     $<$<PLATFORM_ID:Linux>:src/linux/fs_linux.c>
     $<$<PLATFORM_ID:Linux>:src/linux/mfile_linux.c>
     $<$<PLATFORM_ID:Linux>:src/linux/thread_linux.c>
     $<$<PLATFORM_ID:Linux>:src/linux/utf8_linux.c>
 
-    $<$<PLATFORM_ID:Windows>:$<$<BOOL:${VH_MEM_BACKTRACE}>:src/win32/backtrace_win32.c>>
+    $<$<PLATFORM_ID:Windows>:src/win32/backtrace_win32.c>
     $<$<PLATFORM_ID:Windows>:src/win32/dynlib_win32.c>
     $<$<PLATFORM_ID:Windows>:src/win32/fs_win32.c>
     $<$<PLATFORM_ID:Windows>:src/win32/mfile_win32.c>
