Migration support in sqlgen (wip)

--- a/plugins/vod-review/CMakeLists.txt
+++ b/plugins/vod-review/CMakeLists.txt
@@ -7,7 +7,7 @@ project ("vod-review"
 include (VODHoundPlugin)
 
 find_package (GTK4 REQUIRED COMPONENTS
-    gtk glib cairo pango harfbuzz gdk-pixbuf graphene)
+    gtk glib cairo pango harfbuzz gdk-pixbuf graphene epoxy)
 
 vodhound_add_plugin (${PROJECT_NAME}
     SOURCES
@@ -23,6 +23,7 @@ vodhound_add_plugin (${PROJECT_NAME}
         GTK4::harfbuzz
         GTK4::gdk-pixbuf
         GTK4::graphene
+        GTK4::epoxy
         GTK4::gtk)
 
 if (VODHOUND_VOD_REVIEW)
