Moving code from vod review plugin into aitool plugin

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -13,3 +13,6 @@ install (
 add_subdirectory ("search")
 add_subdirectory ("video-ffmpeg")
 add_subdirectory ("vod-review")
+add_subdirectory ("aitool")
+
+
