--- a/plugins/aitool/CMakeLists.txt
+++ b/plugins/aitool/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required (VERSION 3.21)
 
-project ("vod-review"
+project ("aitool"
     VERSION 0.0.1
     LANGUAGES C)
 
 include (VODHoundPlugin)
 
 find_package (GTK4 REQUIRED COMPONENTS
-    gtk glib cairo pango harfbuzz gdk-pixbuf graphene)
+    gtk glib cairo pango harfbuzz gdk-pixbuf graphene epoxy)
 
 vodhound_add_plugin (${PROJECT_NAME}
     SOURCES
-        "src/plugin_vod_review.c"
+        "src/plugin_aitool.c"
     HEADERS
     INCLUDES
         "include"
@@ -23,7 +23,9 @@ vodhound_add_plugin (${PROJECT_NAME}
         GTK4::harfbuzz
         GTK4::gdk-pixbuf
         GTK4::graphene
+        GTK4::epoxy
         GTK4::gtk)
 
-if (VODHOUND_VOD_REVIEW)
+if (VODHOUND_AITOOL)
 endif ()
+
