Adding initial db tests

--- a/vh/CMakeLists.txt
+++ b/vh/CMakeLists.txt
@@ -239,6 +239,7 @@ if (VODHOUND_TESTS)
         "tests/env_vh_init.cpp"
         "tests/test_vh_btree.cpp"
         "tests/test_vh_btree_as_set.cpp"
+        "tests/test_vh_db.cpp"
         "tests/test_vh_frame_data.cpp"
         "tests/test_vh_mem.cpp"
         "tests/test_vh_hm.cpp"
